[project]
name = "ha-vcontrold-mqtt-sensor-helper"
version = "0.1.0"
description = "tool creating sensor yaml-files to have mqtt-sensors in home assistant feeded by vcontrold instance"
authors = [
    {name = "Jonas Arndt",email = "joebubi@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "parseargs (>=0.0.5,<0.0.6)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
